# mcp-gmail-manager

./: .gitignore  LICENSE  README.md  README.pt-BR.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: security.yml
audits/: v0.3.0-external-audit.md
docs/: INSTALLATION.md  INSTALLATION.pt-BR.md
docs/images/: README.md
examples/: config.example.json  config.with-allowlist.json
src/mcp_gmail_manager/: __init__.py  auth.py  config.py  server.py  verify_log.py
